# activerb

./: .gitignore  README.md  RESULTS.md  build_dataset.py  modal_eval_only.py  modal_experiment.py  pyproject.toml  run_experiment.py
activerb/: __init__.py  data.py  eval.py  hooks.py  model.py  train.py
activerb/datasets/: classification.py  past_lens.py
tests/: test_smoke.py
