[project]
name = "activerb"
version = "0.1.0"
description = "Activation verbalization research"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "torch",
    "transformers>=4.50.0",
    "numpy",
    "loguru>=0.7.3",
    "tqdm>=4.67.3",
    "jaxtyping>=0.3.9",
    "accelerate>=1.0.0",
    "peft>=0.14.0",
    "datasets>=3.0.0",
    "psycopg2-binary>=2.9.12",
]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "deptry>=0.24.0",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "ty>=0.0.18",
    "modal>=0.73.0",
]

[tool.ruff]
line-length = 150
target-version = "py314"

[tool.ruff.lint]
preview = true
select = [
    "I",
    "E",
    "F",
    "W",
    "B",
    "N",
    "C90",
    "UP",
    "ANN",
    "C4",
    "PT",
    "Q",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "TD",
    "PL",
    "TRY",
    "FLY",
    "PERF",
    "RUF",
]
ignore = ["TD003", "TRY003", "SIM108", "PLR0913", "PLR0917", "C901", "N806", "N803", "N818", "PLR0914", "PLR0915", "B905", "PLC0415"]
unfixable = ["B"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
addopts = "--capture=no"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["activerb"]
